--- a/pom.xml
+++ b/pom.xml
@@ -65,11 +65,6 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.6.0</version>
 		</dependency>
-		<dependency>
-			<groupId>org.openapitools</groupId>
-			<artifactId>jackson-databind-nullable</artifactId>
-			<version>0.2.6</version>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -99,32 +94,24 @@
 				</configuration>
 			</plugin>
 			<plugin>
-			<groupId>org.openapitools</groupId>
-			<artifactId>openapi-generator-maven-plugin</artifactId>
-			<version>7.3.0</version>
-			<executions>
-				<execution>
-				<id>generate-api</id>
-				<phase>generate-sources</phase>
-				<goals>
-					<goal>generate</goal>
-				</goals>
-				<configuration>
-					<inputSpec>${project.basedir}/src/main/resources/swagger.yaml</inputSpec>
-					<generatorName>spring</generatorName>
-					<apiPackage>com.mercahub.api</apiPackage>
-					<modelPackage>com.mercahub.dto</modelPackage>
-					<invokerPackage>com.mercahub</invokerPackage>
-					<configOptions>
-					<interfaceOnly>true</interfaceOnly>
-					<dateLibrary>java8</dateLibrary>
-					<library>spring-boot</library>
-					<useJakartaEe>true</useJakartaEe>
-					</configOptions>
-				</configuration>
-				</execution>
-			</executions>
-			</plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.12</version>
+				<executions>
+					<execution>
+					<goals>
+						<goal>prepare-agent</goal>
+					</goals>
+					</execution>
+					<execution>
+					<id>report</id>
+					<phase>verify</phase>
+					<goals>
+						<goal>report</goal>
+					</goals>
+					</execution>
+				</executions>
+		</plugin>
 		</plugins>
 	</build>
 
